--- a/angular.json
+++ b/angular.json
@@ -89,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap-theme.min.css",
               "src/styles.css"
             ],
             "scripts": []
